Write CEF injectees, callbacks, re-introduce overlay notifier
