# api/handler/steam/register.go
@@ -3,6 +3,7 @@ package steam
 import (
 	"net/http"
 
+	"github.com/Alia5/SISR/api/handler/steam/cef"
 	"github.com/Alia5/SISR/cmd"
 	"github.com/danielgtaylor/huma/v2"
 )
@@ -12,4 +13,7 @@ func Register(a huma.API, c *cmd.SISRContext) {
 		Method: http.MethodGet,
 		Path:   "/api/v1/steam/status",
 	}, status(c))
+
+	cef.Register(a, c)
+
 }
